--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,7 @@
   --text-color: hsla(229, 16%, 45%, 0.797);
   --border-color: hsl(230, 50%, 90%);
   --white-color: hsl(0, 0%, 100%);
-  --body-color: hsl(230, 100%, 96%);
+  --body-color: hsla(130, 21%, 95%, 0.966);
   --container-color: hsl(230, 100%, 97%);
 
   /*========== Font and typography ==========*/
@@ -230,14 +230,14 @@ img {
 /*=============== SEARCH ===============*/
 /* mecanismo de procura */
 
-.search__close{
+.search {
   position: fixed;
   top: -100%;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 100;
-  background-color: hsla(240, 10%, 96%, 0.412);
+  background-color: hsla(230, 12%, 96%, .6);
   backdrop-filter: blur(16px);
   padding: 8rem 1.5rem;
   transition: top .4s;
