novas imagens com sombreamento e slides js e css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,7 +222,9 @@ img {
 
 
 /* Add shadow header */
-
+.shadow-header {
+  box-shadow: 0;
+}
 
 /* Active link */
 
@@ -366,8 +368,41 @@ img {
 }
 
 /*=============== HOME ===============*/
+.home__swiper {
+  margin: initial;
+}
 
+.home__container {
+  padding-top: 2rem;
+  row-gap: 2.5rem;
+}
 
+.home__data {
+  text-align: center;
+}
+
+.home__title {
+  font-size: var(--biggest-font-size);
+  margin-bottom: 1rem;
+}
+
+.home__description {
+  margin-bottom: 2rem;
+}
+
+.home__images {
+  display: grid;
+}
+
+.home__article,
+.home__img {
+  width: 220px;
+  transition: scale .4s;
+}
+
+.home__article {
+  scale: .8;
+}
 /* Swiper class */
 
 
@@ -391,7 +426,10 @@ button:hover {
 
 
 /* Swiper class */
-
+.swiper-slide-active,
+.swiper-slide-duplicate-active {
+  scale: 1;
+}
 
 /*=============== DISCOUNT ===============*/
 
