--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -112,7 +112,7 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1220px;
+  max-width: 100%;
   margin-inline: 1.5rem;
 }
 
@@ -403,8 +403,25 @@ img {
 .home__article {
   scale: .8;
 }
-/* Swiper class */
+/* ====Swiper class===== */
+.swiper-featured {
+  width: 500px;
+  height: 500px;
+}
 
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: ' ';
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: initial;
+  height: initial;
+  background-color: var(--container-color);
+  border: 2px solid var(--border-color);
+  padding: .5rem;
+}
 
 /*=============== BUTTON ===============*/
 .button {
@@ -450,6 +467,7 @@ button:hover {
   overflow: hidden;
   border: 2px solid var(--border-color);
   transition: border .4s, background-color .4s;
+
 }
 
 .featured__img {
@@ -505,11 +523,10 @@ button:hover {
   right: 1.5rem;
 }
 
+
+
 /* =======Swiper class======= */
-.swiper-slide-active,
-.swiper-slide-duplicate-active {
-  scale: 1;
-}
+
 
 /*=============== DISCOUNT ===============*/
 
