--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -408,6 +408,7 @@ img {
   scale: .8;
 }
 /* ====Swiper class===== */
+
 .swiper-button-prev::after,
 .swiper-button-next::after {
   content: ' ';
@@ -418,11 +419,14 @@ img {
   width: initial;
   height: initial;
   background-color: var(--container-color);
-  border: 2px solid var(--border-color);
-  padding: .5rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: var(--first-color);
+  transition: border .4s background-color .4s;
 }
 
 /*=============== BUTTON ===============*/
+
 .button {
   display: inline-block;
   background-color: var(--first-color);
@@ -530,11 +534,44 @@ button:hover {
   scale: 1;
 }
 
+
 /* ===============INFOPRODUTOS===============*/
 
 
 /*=============== DISCOUNT ===============*/
+.discount__container {
+  row-gap: 3.5rem;
+}
 
+.discount__data {
+  text-align: center;
+}
+
+.discount__title {
+  margin-bottom: 1rem;
+}
+
+.discount__description {
+  margin-bottom: 2rem;
+}
+
+.discount__images {
+  display: flex;
+  justify-content: center;
+}
+
+.discount__img-1,
+.discount__img-2 {
+  width: 170px;
+}
+
+.discount__img-1{
+  transform: translateX(1rem) rotate(-20deg);
+}
+
+.discount__img-2{
+  transform: translateX(-1rem) rotate(20deg);
+}
 
 /*=============== NEW ===============*/
 
