--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -626,6 +626,55 @@ button:hover {
   margin-bottom: 2rem;
 }
 /*=============== JOIN ===============*/
+.join {
+  position: relative;
+  padding-block: 3.5rem;
+}
+
+.join__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.join__data {
+  position: relative;
+}
+
+.join__title {
+  width: 119%;
+  text-align: center;
+  color: var(--white-color);
+  font-size: var(--h2-font-size);
+}
+
+.join__form {
+  display: grid;
+  row-gap: 1rem;
+  width: 119%;
+  justify-content: center;
+
+}
+
+.join__input{
+  padding: 1.5rem 1rem;
+  background-color: var(--body-color);
+  color: var(--title-color);
+  transition: background-color .4s;
+}
+
+.join__input::placeholder {
+  color: var(--text-color);
+}
+
+.join__button {
+  padding-block: 1.75rem;
+  cursor: pointer;
+}
 
 
 /*=============== TESTIMONIAL ===============*/
