--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -978,4 +978,72 @@ button:hover {
     column-gap: 4rem;
   }
 
+  .nav__link {
+    font-weight: var(--font-medium);
+  }
+
+  .dark-theme .nav__menu {
+    box-shadow: none;
+  }
+
+  .home__data {
+    width: initial;
+  }
+
+  .services__container {
+    column-gap: 10rem;
+  }
+
+  .services__card i {
+    font-size: 3.5rem;
+  }
+
+  .featured__container {
+    padding-top: 2rem;
+  }
+
+  .featured__title {
+    font-size: var(--h3-font-size);
+  }
+
+  .discount__container {
+    grid-template-columns: 615px 500px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .discount__data {
+    order: 1;
+  }
+
+  .discount__data,
+  .discount__title {
+    text-align: initial;
+  }
+
+  .discount__description {
+    margin-bottom: 3.5rem;
+  }
+
+  .discount__img-1,
+  .discount__img-2 {
+    width: 300px;
+  }
+
+  .new__container {
+    padding-top: 2rem;
+  }
+
+  .new__card {
+    padding: 1.5rem;
+  }
+
+  .new__img {
+    width: 120px;
+  }
+
+  .new__title {
+    font-size: var(--h3-font-size);
+  }
+
 }
