--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,6 +100,10 @@ img {
   height: auto;
 }
 
+span {
+  color: rgb(104, 170, 206);
+}
+
 /*=============== THEME ===============*/
 /*========== Variables Dark theme ==========*/
 body.dark-theme {
@@ -108,6 +112,10 @@ body.dark-theme {
   --border-color: hsl(230, 12%, 18%);
   --body-color: hsla(230, 12%, 8%);
   --container-color: hsla(230, 9%, 39%, 0.861);
+}
+
+span.dark-theme {
+  color: hsl(230, 48%, 85%);
 }
 
 /*========== 
